--- a/Authentication Page.html
+++ b/Authentication Page.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="Authentication Page.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    
-  </head>
-  <body>
-    <form method="POST" action="http://localhost/min_p/login.php" class="login">
-      <h2>Login</h2>
-      <p id="message"></p> <!-- سيتم عرض رسالة تسجيل الدخول هنا -->
-      <div class="flex">
-        <div class="input-groupe">
-          <label>Username</label>
-          <input
-            type="text"
-            placeholder="Enter your username"
-            name="username"
-            value=""
-          />
-        </div>
-        <div class="input-groupe">
-          <label>Password</label>
-          <input
-            type="password"
-            placeholder="Enter your password"
-            value=""
-            name="password"
-          />
-        </div>
-        <button type="button" onclick="" >
-          <i class="fa-solid fa-circle-user"></i> Login
-        </button>
-        <p>
-          Dont have an account ?
-          <a href="create account.html" class="cr-a"> Sing up </a>
-        </p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="Authentication Page.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+</head>
+
+<body>
+  <form method="POST" action="http://localhost/min_p/login.php" class="login">
+    <h2>Login</h2>
+    <p id="message">h</p> <!-- سيتم عرض رسالة تسجيل الدخول هنا -->
+    <div class="flex">
+      <div class="input-groupe">
+        <label>Username</label>
+        <input type="text" placeholder="Enter your username" name="username" value="" />
       </div>
-    </form>
-    <script src="login.js"></script>
-  </body>
+      <div class="input-groupe">
+        <label>Password</label>
+        <input type="password" placeholder="Enter your password" value="" name="password" />
+      </div>
+      <button type="button" onclick="">
+        <i class="fa-solid fa-circle-user"></i> Login
+      </button>
+      <p>
+        Dont have an account ?
+        <a href="create account.html" class="cr-a"> Sing up </a>
+      </p>
+    </div>
+  </form>
+  <script src="login.js"></script>
+</body>
+
 </html>
