creating examan page

--- a/Main Page/main page.html
+++ b/Main Page/main page.html
@@ -12,15 +12,18 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Special+Gothic&display=swap"
     rel="stylesheet">
+  <title>UMBB - Department of Computer Science</title>
 </head>
 
 <body>
   <header>
     <img src="https://upload.wikimedia.org/wikipedia/ar/archive/a/a7/20170617013644%21Logo-umbb-crsic.png" alt=""
       class="logo" />
-    <h1 class="h-1">
-      UMBB - Faculty Of Science - Department of Computer Science
-    </h1>
+    <div>
+      <h1 class="h-1">
+        UMBB - Faculty Of Science - Department of Computer Science
+      </h1>
+    </div>
   </header>
   <main>
 
@@ -41,27 +44,39 @@
     <div>
       <article id="wad">
         <h1>Web Application Development (WAD)</h1>
-        <p><i class="fa-solid fa-clock"></i>Time : 10:00 AM</p>
-        <p><i class="fa-solid fa-clock"></i> Duration : 30 minutes</p>
-        <p><i class="fa-solid fa-circle-question"></i>10 question</p>
-        <a href="wad\exam wad.html" class="st-e">Get Start</a>
+        <ul>
+          <li><i class="fa-solid fa-clock"></i>Time : 10:00 AM</li>
+          <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
+          <li><i class="fa-solid fa-circle-question"></i>10 question</li>
+        </ul>
+        <div class="btn">
+          <a href="../examPage/exam.html?ex=wad">Get Start</a>
+        </div>
       </article>
 
       <article id="oop">
         <h1>Object - Oriented Programming (oop)</h1>
-        <p><i class="fa-solid fa-clock"></i> Time : 10:00 AM</p>
-        <p><i class="fa-solid fa-clock"></i> Duration : 30 minutes</p>
-        <p><i class="fa-solid fa-circle-question"></i>10 question</p>
-        <a href="oop\exam oop.html" class="st-e">Get Start</a>
+        <ul>
+          <li><i class="fa-solid fa-clock"></i>Time : 10:00 AM</li>
+          <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
+          <li><i class="fa-solid fa-circle-question"></i>10 question</li>
+        </ul>
+        <div class="btn">
+          <a href="../examPage/exam.html?ex=oop">Get Start</a>
+        </div>
       </article>
 
 
       <article id="lth">
         <h1>Language Theory</h1>
-        <p><i class="fa-solid fa-clock"></i>Time : 12:00 AM</p>
-        <p><i class="fa-solid fa-clock"></i>Duration : 30 minutes</p>
-        <p><i class="fa-solid fa-circle-question"></i>10 questuin</p>
-        <a href="Main Page\Choose the exam.html" class="st-e">Get Start</a>
+        <ul>
+          <li><i class="fa-solid fa-clock"></i>Time : 12:00 AM</li>
+          <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
+          <li><i class="fa-solid fa-circle-question"></i>10 questuin</li>
+        </ul>
+        <div class="btn">
+          <a href="../examPage/exam.html?ex=lth">Get Start</a>
+        </div>
       </article>
     </div>
 
