--- a/create account.html
+++ b/create account.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create account</title>
     <link rel="stylesheet" href="create account.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="create account.css">
 </head>
 <body>
 <form  action="http://localhost/min_p/register.php" method="POST"class="login" >
