--- a/examPage/exam.html
+++ b/examPage/exam.html
@@ -22,11 +22,11 @@
   <div class="container">
 
     <nav>
-      <a href="#"><strong><em>Question 1</em></strong></a>
+      <!-- <a href="#"><strong><em>Question 1</em></strong></a>
       <a href="#"><strong><em>Question 2</em></strong></a>
       <a href="#"><strong><em>Question 2</em></strong></a>
       <a href="#"><strong><em>Question 2</em></strong></a>
-      <a href="#"><strong><em>Question 2</em></strong></a>
+      <a href="#"><strong><em>Question 2</em></strong></a> -->
     </nav>
     <main>
       <h1 id="examName">Exam name</h1>
@@ -34,48 +34,43 @@
         <p>Student Name: <span id="studentName">John Doe</span></p>
         <p>Student ID: <span id="studentID">123456</span></p>
       </div>
-      <div class="questions">
+      <div id="questions">
 
-        <article>
-          <h3>Question 1</h3>
+        <!-- <article>
+          <div class="h-question">
+            <h3>Question 2 :</h3>
+            <em>( <span id="point">3</span> point )</em>
+          </div>
           <p><em>What is the output of the following code?</em></p>
-          <pre><code>console.log("Hello, World!");</code></pre>
-          <button onclick="checkAnswer('A')">A</button>
-          <button onclick="checkAnswer('B')">B</button>
-          <button onclick="checkAnswer('C')">C</button>
-        </article>
-
-        <article>
-          <h3>Question 2</h3>
-          <p><em>What is the output of the following code?</em></p>
-          <pre><code>console.log("Hello, World!");</code></pre>
-          <button onclick="checkAnswer('A')">A</button>
-          <button onclick="checkAnswer('B')">B</button>
-          <button onclick="checkAnswer('C')">C</button>
-        </article>
-
-        <article>
-          <h3>Question 3</h3>
-          <p><em>What is the output of the following code?</em></p>
-          <pre><code>console.log("Hello, World!");</code></pre>
-          <button onclick="checkAnswer('A')">A</button>
-          <button onclick="checkAnswer('B')">B</button>
-          <button onclick="checkAnswer('C')">C</button>
-        </article>
+          <ul>
+            <li>
+              <input type="radio" name="fruit" value="cherry"> Cherry
+            </li>
+            <li>
+              <input type="radio" name="fruit" value="banana"> Banana
+            </li>
+            <li>
+              <input type="radio" name="fruit" value="apple"> Apple
+            </li>
+          </ul>
+        </article> -->
 
       </div>
-      <div>
-        <button class="submit" onclick="submitExam()">Submit Exam</button>
+      <div class="submit-container">
+        <a href="../Main Page/main page.html" id="back">Back home</a>
+        <button id="submit" onclick="submitExam()">Submit Exam</button>
       </div>
     </main>
+
+    <!-- Asides -->
     <div>
       <aside>
         <h1>Timer</h1>
-        <p id="timer">00:00</p>
+        <p id="timer"></p>
       </aside>
       <aside>
         <h1>Score</h1>
-        <p id="score">0</p>
+        <p id="score"></p>
       </aside>
 
     </div>
