--- a/Main Page/main page.html
+++ b/Main Page/main page.html
@@ -37,7 +37,7 @@
         <a href="#oop">Object-Oriented Programming</a>
         <!-- </div> -->
         <!-- <div class="exam"> -->
-        <a href="#lth">Language Theory</a>
+        <a href="#lth">DataBase</a>
         <!-- </div> -->
       </div>
     </nav>
@@ -45,7 +45,6 @@
       <article id="wad">
         <h1>Web Application Development (WAD)</h1>
         <ul>
-          <li><i class="fa-solid fa-clock"></i>Time : 10:00 AM</li>
           <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
           <li><i class="fa-solid fa-circle-question"></i>10 question</li>
         </ul>
@@ -57,7 +56,6 @@
       <article id="oop">
         <h1>Object - Oriented Programming (oop)</h1>
         <ul>
-          <li><i class="fa-solid fa-clock"></i>Time : 10:00 AM</li>
           <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
           <li><i class="fa-solid fa-circle-question"></i>10 question</li>
         </ul>
@@ -67,11 +65,10 @@
       </article>
 
 
-      <article id="lth">
-        <h1>Language Theory</h1>
+      <article id="bdd">
+        <h1>DataBase</h1>
         <ul>
-          <li><i class="fa-solid fa-clock"></i>Time : 12:00 AM</li>
-          <li><i class="fa-solid fa-clock"></i>Duration : 30 minutes</li>
+          <li><i class="fa-solid fa-clock"></i>Duration : 20 minutes</li>
           <li><i class="fa-solid fa-circle-question"></i>10 questuin</li>
         </ul>
         <div class="btn">
@@ -81,27 +78,26 @@
     </div>
 
   </main>
-  <!-- <footer>
-        <div class="foot">
-           <h1 id="xx"> <?php echo htmlspecialchars($username);</h1>
-           <h1 class="h1-k">my group</h1>
-           <h1 class="h1-k">my gmail</h1>
-        </div> 
-    </footer>
-    <div id="userInfo">
-      <p id="username"></p>
-      <p id="userid"></p>
-      <p id="fullName"></p>
-      <p id="email"></p>
-      <p id="group"></p>
-<<<<<<< Updated upstream
-  </div> -->
   <footer>
-    <div id="userData">
-      <!-- سيتم عرض بيانات المستخدم هنا -->
+    <div class="student-info">
+      <h3>My Informations :</h3>
+      <div>
+        <div>
+          <p>Full Name : <span>Mesbahi abdelaziz</span></p>
+          <p>ID : <span>1234567</span></p>
+        </div>
+        <div>
+          <p>Group : <span>04</span></p>
+          <p>Email : <span>abdou@gmail.com</span></p>
+        </div>
+      </div>
     </div>
-    <p>Username: </p>
-    <p>User ID: </p>
+    <div class="student-note">
+      <h3>My Notes :</h3>
+      <p>Web Application Development : <span>10</span></p>
+      <p>Object - Oriented Programming : <span>04</span></p>
+      <p>Database : <span>0</span></p>
+    </div>
   </footer>
 
   <script src="main page.js"></script>
