--- a/examPage/exam.html
+++ b/examPage/exam.html
@@ -32,8 +32,8 @@
     <main>
       <h1 id="examName">Exam name</h1>
       <div class="student-info">
-        <p>Student Name: <span id="studentName">John Doe</span></p>
-        <p>Student ID: <span id="studentID">123456</span></p>
+        <p>Student Name: <span id="studentName">Mesbahi AbdelAziz</span></p>
+        <p>Student ID: <span id="studentID">1234567</span></p>
       </div>
       <div id="questions">
 
